--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/src/assets/img/cat.jpg">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Giggler - Freelance Services Market</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/img/favicon-16x16.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Giggler - Freelance Services Market</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/index.jsx"></script>
+</body>
+
 </html>
