no more images or svgs!

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/img/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dgwgcf6mk/image/upload/v1701965061/Giggler/other/favicon-32x32_xlitug.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dgwgcf6mk/image/upload/v1701965061/Giggler/other/favicon-16x16_uizlar.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Giggler - Freelance Services Marketplace</title>
 </head>
